--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,25 @@
 :root {
   font-family: "SF Pro", serif;
   color-scheme: light dark;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  margin: 20px;
+  background: #F2F2F7;
+}
+
+p {
+  margin: 0;
+  letter-spacing: -0.43px;
+  line-height: 22px;
+  font-size: 17px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
